--- a/src/components/Benefits/Benefits.scss
+++ b/src/components/Benefits/Benefits.scss
@@ -34,9 +34,37 @@
         }
     }
 
-	&__descriptions {
+    .descriptions {
+        position: relative;
+        top: 0;
+        left: 0;
+        z-index: 3;
 
-	}
+        &__button {
+            width: 183px;
+            height: 39px;
+            background: rgba(255, 255, 255, 0.05);
+            color: $primaryText;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            backdrop-filter: blur(2.5px);
+            border-radius: 10px;
+            text-transform: uppercase;
+            padding-right: 15px;
+            padding-left: 44px;
+            font-style: normal;
+            font-weight: 700;
+            font-size: 10px;
+            line-height: 16px;
+            cursor: pointer;
+            transition: all 1s ease;
+        }
+
+        &__button:hover {
+            box-shadow: 0px 40px 50px rgba(0, 0, 0, 0.4);
+            transition: all 1s ease;
+            color: $tileTextColor;
+        }
+    }
 
     .description-block {
         color: $primaryText;
@@ -62,31 +90,6 @@
             font-size: 12px;
             line-height: 25px;
             margin-bottom: 30px;
-        }
-
-        &__button {
-            width: 183px;
-            height: 39px;
-            background: rgba(255, 255, 255, 0.05);
-            color: $primaryText;
-            border: 1px solid rgba(255, 255, 255, 0.2);
-            backdrop-filter: blur(2.5px);
-            border-radius: 10px;
-            text-transform: uppercase;
-            padding-right: 15px;
-            padding-left: 44px;
-            font-style: normal;
-            font-weight: 700;
-            font-size: 10px;
-            line-height: 16px;
-            cursor: pointer;
-            transition: all 1s ease;
-        }
-
-        &__button:hover {
-            box-shadow: 0px 40px 50px rgba(0, 0, 0, 0.4);
-            transition: all 1s ease;
-            color: $tileTextColor;
         }
     }
 
@@ -160,249 +163,84 @@
 
 @media screen and (min-width: $tablet) {
     .benefits {
-        display: flex;
-        justify-content: center;
-        background: transparent;
-        z-index: 0;
-        position: relative;
-        min-height: 360px;
+        height: 360px;
 
         &__container {
-            min-height: inherit;
-			bottom: -100px;
+            min-width: 320px;
+            height: 460px;
             margin: 0 30px;
-            padding: 20px 20px;
+            padding: 0 20px;
             background-size: contain;
             background-position: right;
+        }
 
-            &::after {
-                @include pseudo;
-                min-width: 100%;
-                min-height: 100%;
-                top: 0;
-                left: 0;
-                z-index: 1;
-                background: linear-gradient(90deg, rgba(33, 31, 32, 1) 30%, rgba(255, 255, 255, 0) 100%);
+        .descriptions {
+            &__button {
+                width: 283px;
+                height: 59px;
             }
         }
 
         .description-block {
-            color: $primaryText;
-            font-family: "Ubuntu-Light";
-            position: relative;
-            z-index: 3;
+            top: 0;
             max-width: 75%;
-            left: 0;
-            display: none;
-			padding-bottom: 20px;
 
             &__title {
-                font-style: normal;
-                font-weight: 700;
                 font-size: 24px;
-                line-height: 39px;
-                margin-bottom: 26px;
             }
 
             &__subtitle {
-                font-style: normal;
-                font-weight: 400;
                 font-size: 18px;
-                line-height: 25px;
-                margin-bottom: 60px;
-            }
-
-            &__button {
-
             }
         }
 
         &__buttons {
-            display: grid;
-            grid-template-columns: repeat(2, 71px);
-            grid-template-rows: repeat(2, 71px);
-            position: absolute;
-            z-index: 2;
-            right: 15px;
+            right: 0;
             top: 10%;
             max-width: 25%;
-
-            &>* {
-                background: rgba(80, 75, 74, 0.9);
-                backdrop-filter: blur(5px);
-                border: 0;
-                cursor: pointer;
-            }
         }
 
-        &__button {
-            display: grid;
-            gap: 10px;
-            align-content: center;
-            justify-items: center;
-            width: 64px;
-            height: 63px;
-            transition: all 1s ease;
-            font-family: "Ubuntu-Light";
-            font-style: normal;
-            font-weight: 400;
-            font-size: 18px;
-            line-height: 25px;
-            color: $primaryText;
-
-            svg {
-                transition: all 1s ease;
-                fill: $primaryText;
-                width: 40px;
-                height: 40px;
-            }
-
-            span {
-                display: none;
-            }
-        }
-
-
-        .description-block.active {
-            display: block;
-        }
-
-        &__button:hover {
-            box-shadow: 0px 40px 50px rgba(0, 0, 0, 0.4);
-            transition: all 1s ease;
-            color: $tileTextColor;
-
-            svg {
-                transition: all 1s ease;
-                fill: $tileTextColor;
-            }
+        span {
+            display: none;
         }
     }
 }
 
 @media screen and (min-width: $desktop) {
     .benefits {
-        display: flex;
-        justify-content: center;
-        background: transparent;
-        z-index: 0;
-        position: relative;
         height: 510px;
 
         &__container {
             max-width: 1363px;
             min-width: 320px;
             height: 610px;
-            position: absolute;
-            margin: 0 30px;
-            display: flex;
-            align-items: center;
-            background: $headerBackground;
             padding: 0 20px;
-            background-image: url("../../../public/images/curiza.jpg");
-            background-repeat: no-repeat;
-            background-size: contain;
-            background-position: right;
-
-            &::after {
-                @include pseudo;
-                min-width: 100%;
-                min-height: 100%;
-                top: 0;
-                left: 0;
-                z-index: 1;
-                background: linear-gradient(90deg, rgba(33, 31, 32, 1) 30%, rgba(255, 255, 255, 0) 100%);
-            }
         }
 
         .description-block {
-            color: $primaryText;
-            font-family: "Ubuntu-Light";
-            position: relative;
-            z-index: 3;
             max-width: 50%;
-            left: 0;
-            display: none;
 
             &__title {
-                font-style: normal;
-                font-weight: 700;
                 font-size: 32px;
-                line-height: 39px;
-                margin-bottom: 26px;
             }
 
             &__subtitle {
-                font-style: normal;
-                font-weight: 400;
                 font-size: 20px;
-                line-height: 25px;
-                margin-bottom: 60px;
-            }
-
-            &__button {
-                width: 223px;
-                height: 59px;
-                background: rgba(255, 255, 255, 0.05);
-                color: $primaryText;
-                border: 1px solid rgba(255, 255, 255, 0.2);
-                backdrop-filter: blur(2.5px);
-                border-radius: 10px;
-                text-transform: uppercase;
-                padding-right: 25px;
-                padding-left: 54px;
-                font-style: normal;
-                font-weight: 700;
-                font-size: 13px;
-                line-height: 16px;
-                cursor: pointer;
-                transition: all 1s ease;
-            }
-
-            &__button:hover {
-                box-shadow: 0px 40px 50px rgba(0, 0, 0, 0.4);
-                transition: all 1s ease;
-                color: $tileTextColor;
             }
         }
 
         &__buttons {
-            display: grid;
             grid-template-columns: repeat(2, 243px);
             grid-template-rows: repeat(2, 243px);
-            position: absolute;
-            z-index: 2;
-            right: 0;
             max-width: 50%;
             top: 10%;
-
-            &>* {
-                background: rgba(80, 75, 74, 0.9);
-                backdrop-filter: blur(5px);
-                border: 0;
-                cursor: pointer;
-            }
         }
 
         &__button {
-            display: grid;
             gap: 10px;
-            align-content: center;
-            justify-items: center;
             width: 228px;
             height: 226px;
-            transition: all 1s ease;
-            font-family: "Ubuntu-Light";
-            font-style: normal;
-            font-weight: 400;
             font-size: 18px;
-            line-height: 25px;
-            color: white;
-
-            svg {
-                transition: all 1s ease;
-                fill: white;
-            }
 
             span {
                 display: block;
@@ -413,24 +251,5 @@
         .description-block.active {
             display: block;
         }
-
-        &__button:hover {
-            box-shadow: 0px 40px 50px rgba(0, 0, 0, 0.4);
-            transition: all 1s ease;
-            color: $tileTextColor;
-
-            svg {
-                transition: all 1s ease;
-                fill: $tileTextColor;
-            }
-        }
     }
-}
-
-@media screen and (min-width: 1440px) {
-    .benefits {
-		&__container {
-			margin: 0 auto;
-		}
-	}
 }
