--- a/src/components/CheckoutForm/CheckoutForm.scss
+++ b/src/components/CheckoutForm/CheckoutForm.scss
@@ -2,7 +2,7 @@
 @import "../../globalStyles/mixins.scss";
 
 .checkoutForm {
-	padding-top: 190px;
+	padding-top: 210px;
 	min-height: 360px;
 	color: $primaryText;
 	font-family: "Ubuntu-Light", "Arial", sans-serif;
@@ -15,17 +15,55 @@
 	&__link {
 		color: $primaryText;
 		text-decoration: none;
+		font-family: "Ubuntu-Light", "Arial", sans-serif;
+		font-weight: 600;
+		position: relative;
+		padding-left: 15px;
+		margin-bottom: 23px;
+
+		&::before,
+		&::after {
+			@include pseudo;
+			width: 10px;
+			height: 2px;
+			background-color: $primaryText;
+			border-radius: 5px;
+		}
+
+		&::before {
+			transform: rotate(-45deg);
+			top: 6px;
+		}
+		&::after {
+			transform: rotate(45deg);
+			top: 12px;
+		}
 	}
 
 	&__title {
 		text-transform: uppercase;
 		font-weight: 600;
 		margin-bottom: 43px;
+		margin-top: 23px;
+		padding-left: 15px;
+		position: relative;
+
+		&::before {
+			@include pseudo;
+			width: 4px;
+			height: 22px;
+			background: $scrollNavBar;
+		}
+
+		&::before {
+			top: 3px;
+			left: 3px;
+		}
 	}
 
 	&__subtitle {
 		font-weight: 600;
-		margin-bottom: 20px;
+		margin-bottom: 30px;
 	}
 
 	form input, textarea {
@@ -46,15 +84,23 @@
 		font-family: "Ubuntu-Light", "Arial", sans-serif;
 	}
 
+	textarea {
+		resize: none;
+	}
+
 	&__form-contacts,
 	&__form-delivery,
 	&__form-pay,
 	&__form-deliveryTime,
 	&__form-check {
 		background: $cardBackground;
-		padding: 10px 10px;
+		padding: 30px 25px;
 		border-radius: 10px;
 		margin-bottom: 20px;
+	}
+
+	.time-clock {
+		display: none;
 	}
 }
 
@@ -63,18 +109,23 @@
 	gap: 17px;
 }
 
-.toggle-delivery {
-	border-radius: 10px;
-	padding: 10px 10px;
+.toggle-delivery,
+.toggle-pay {
+	display: flex;
+	margin-bottom: 20px;
 
-	span {
-		padding: 10px 10px;
+	&__span {
+		padding: 20px 30px;
 		border-radius: 10px;
-		border: 1px solid rgba(255,255,255,0.1);
+		border: 1px solid $tileTextColor;
 		cursor: poiner;
+		display: flex;
+		min-width: 50%;
+		justify-content: center;
 
 		&:first-of-type {
 			border-radius: 10px 0px 0px 10px;
+			border-left: 0;
 		}
 
 		&:last-of-type {
@@ -82,7 +133,69 @@
 		}
 	}
 
-	span.active {
+	&__span.active {
 		background: $buttonColor;
+	}
+}
+
+.toggle-pay {
+	flex-direction: row-reverse;
+    justify-content: flex-end;
+
+	&__span {
+		white-space: nowrap;
+		min-width: 30%;
+		max-height: 60px;
+		position: relative;
+
+		&:first-of-type {
+			border-radius: 0px 10px 10px 0px;
+		}
+		&:nth-of-type(2) {
+			border-radius: 0px 0px 0px 0px;
+			border-left: 0;
+		}
+
+		&:last-of-type {
+			border-radius: 10px 0px 0px 10px;
+		}
+	}
+}
+
+.form-pay-result {
+	padding: 10px 10px;
+	border: 1px solid rgba(255,255,255,0.1);
+	border-radius: 10px;
+	color: $primaryText;
+	min-height: 60px;
+	display: flex;
+	align-items: center;
+	max-width: 173px;
+}
+
+@media screen and (min-width: $tablet) {
+	.time-clock {
+		display: flex;
+		align-content: center;
+	}
+
+	.toggle-pay {
+		flex-direction: row;
+		justify-content: flex-start;
+
+		span {
+			&:first-of-type {
+				border-radius: 10px 0px 0px 10px;
+				border: 1px solid $tileTextColor;
+			}
+			&:nth-of-type(2) {
+				border-radius: 0px 0px 0px 0px;
+				border-left: 1px solid $tileTextColor;
+			}
+
+			&:last-of-type {
+				border-radius: 0px 10px 10px 0px;
+			}
+		}
 	}
 }
