--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -74,7 +74,7 @@
 	}
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: $tablet) {
 	.navbar {
 		background: $menuNavBarBackground;
 		top: 96px;
@@ -86,7 +86,7 @@
 		}
 	}
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: $desktop) {
 	.navbar {
 		background: $menuNavBarBackground;
 
