--- a/src/components/CheckoutForm/CheckoutForm.scss
+++ b/src/components/CheckoutForm/CheckoutForm.scss
@@ -66,7 +66,7 @@
 		margin-bottom: 30px;
 	}
 
-	form input, textarea {
+	&__form input, textarea {
 		&:placeholder {
 			font-family: "Ubuntu-Light", "Arial", sans-serif;
 			color: $primaryText;
@@ -80,8 +80,14 @@
 		min-height: 60px;
 	}
 
-	form button {
+	&__form button {
 		font-family: "Ubuntu-Light", "Arial", sans-serif;
+		background: transparent;
+		font-weight: 600;
+		border: 1px solid $tileTextColor;
+		color: $primaryText;
+		background: $scrollNavBar;
+		padding: 20px 10px;
 	}
 
 	textarea {
@@ -99,6 +105,32 @@
 		margin-bottom: 20px;
 	}
 
+	&__form-check {
+		display: grid;
+		gap: 20px;
+
+		button {
+			padding: 17px 50px;
+			border-radius: 10px;
+			margin: 0 auto;
+			min-width: calc(100% - 40px);
+		}
+
+		label {
+			margin-left: 10px;
+		}
+
+		label a {
+			color: $scrollNavBar;
+			text-decoration: none;
+			border-bottom: 1px solid $scrollNavBar;
+			padding-bottom: 5px;
+			&:hover {
+				opacity: 0.8;
+			}
+		}
+	}
+
 	.time-clock {
 		display: none;
 	}
@@ -110,7 +142,8 @@
 }
 
 .toggle-delivery,
-.toggle-pay {
+.toggle-pay,
+.toggle-checkTime {
 	display: flex;
 	margin-bottom: 20px;
 
@@ -122,6 +155,7 @@
 		display: flex;
 		min-width: 50%;
 		justify-content: center;
+		font-size: 12px;
 
 		&:first-of-type {
 			border-radius: 10px 0px 0px 10px;
@@ -135,6 +169,7 @@
 
 	&__span.active {
 		background: $buttonColor;
+		font-weight: 600;
 	}
 }
 
@@ -145,7 +180,7 @@
 	&__span {
 		white-space: nowrap;
 		min-width: 30%;
-		max-height: 60px;
+		min-height: 60px;
 		position: relative;
 
 		&:first-of-type {
@@ -172,6 +207,92 @@
 	align-items: center;
 	max-width: 173px;
 }
+
+
+.toggle-checkTime {
+	&__span {
+		font-size: 12px;
+		padding: 20px 10px;
+		white-space: nowrap;
+		min-height: 60px;
+
+
+		&:first-of-type {
+			border: 1px solid $tileTextColor;
+		}
+	}
+}
+
+.span {
+	border: 1px solid rgba(255,255,255,0.1);
+	display: flex;
+	min-width: 100%;
+    border-radius: 10px;
+    color: $primaryText;
+    min-height: 60px;
+	margin-bottom: 20px;
+
+	&:last-of-type {
+		margin-bottom: 30px;
+	}
+
+	input {
+		border: none;
+		padding: 0;
+		min-width: 60%;
+		padding: 5px 10px;
+	}
+
+	button {
+		background: transparent;
+		border: none;
+		color: $primaryText;
+		font-size: 45px;
+		margin: 5px;
+	}
+}
+
+.count-wrap {
+	display: flex;
+	align-items: center;
+	flex-grow: 1;
+
+	&__num {
+		font-size: 30px;
+		font-weight: 600;
+		font-family: "Ubuntu-Light", "Arial", sans-serif;
+	}
+
+	&__button {
+		position: relative;
+
+		&::before {
+			@include pseudo;
+			width: 20px;
+			height: 4px;
+			left: -15px;
+			top: 21px;
+			background-color: $primaryText;
+		}
+	}
+}
+
+.radio {
+	display: flex;
+	align-items: center;
+	height: 35px;
+
+	label {
+		padding-left: 10px;
+	}
+}
+
+.policy-check {
+	display: flex;
+	align-items: center;
+}
+
+// media tablet
 
 @media screen and (min-width: $tablet) {
 	.time-clock {
