--- a/src/components/CheckoutForm/CheckoutForm.scss
+++ b/src/components/CheckoutForm/CheckoutForm.scss
@@ -130,13 +130,14 @@
 			}
 		}
 	}
-
-	.time-clock {
-		display: none;
-	}
 }
 
-.input-contacts {
+.time-clock {
+	display: none;
+}
+
+.input-contacts,
+.input-adress {
 	display: grid;
 	gap: 17px;
 }
@@ -207,7 +208,6 @@
 	align-items: center;
 	max-width: 173px;
 }
-
 
 .toggle-checkTime {
 	&__span {
@@ -292,13 +292,85 @@
 	align-items: center;
 }
 
-// media tablet
+.delivery-time{
+	display: grid;
+	gap: 20px;
+}
 
-@media screen and (min-width: $tablet) {
+// media phone-lg
+@media screen and (min-width: $phone-lg) {
+	.input-contacts {
+		display: flex;
+
+		&__input {
+			flex-grow: 1;
+		}
+	}
+
+	.delivery-time {
+		display: flex;
+		align-items: center;
+		margin-bottom: 20px;
+
+		span {
+			min-width: 60%;
+
+			&:last-of-type {
+				margin-bottom: 0;
+				min-width: 40%;
+			}
+		}
+	}
+
 	.time-clock {
 		display: flex;
 		align-content: center;
+		padding-left: 10px;
+
+		span {
+			margin-left: 10px;
+		}
 	}
+
+	.toggle-delivery {
+		margin-bottom: 0;
+	}
+
+	.input-adress {
+		grid-template-columns: repeat(3, minmax(100px, auto));
+		gap: 10px;
+
+		&__input{
+			&:first-child {
+				grid-column: 1/3;
+			}
+			&:nth-child(2) {
+				grid-column: 3/3;
+			}
+			&:nth-child(3) {
+				grid-column: 1/1;
+			}
+			&:nth-child(4) {
+				grid-column: 2/2;
+			}
+			&:nth-child(5) {
+				grid-column: 3/3;
+			}
+			&:last-child {
+				grid-column: 1/4;
+			}
+		}
+	}
+
+	.toggle-checkTime {
+		margin-bottom: 0;
+	}
+}
+
+// media tablet
+
+@media screen and (min-width: $tablet) {
+
 
 	.toggle-pay {
 		flex-direction: row;
